# reality-doctor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: ingest.py  search.py
src/: doctor.py
src/api/: main.py
src/bot/: __init__.py  feedback.py  rate_limit.py  telegram_bot.py
src/core/: config.py  log.py
src/generation/: llm_client.py  rag_pipeline.py
src/ingestion/: chunker.py  embedder.py
src/retrieval/: qdrant_store.py
src/safety/: __init__.py  router.py  scrub.py  validate.py
tests/: test_rate_limit.py  test_safety.py  test_validate.py
