[project]
name = "reality-doctor"
version = "0.1.0"
description = "AI assistant that diagnoses VLESS+Reality / MTProxy / zapret problems, grounded in the Anti-Censorship Handbook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]